[KYLIN-4780] fix string init with default charset